Minor fixes, adding the company moto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <title>Advanced Git: Workflows for Developers</title>
 
-		<meta name="description" content="Personal, Team and Client workflows in Git">
+		<meta name="description" content="Personal, Team and Release workflows for Git">
 		<meta name="author" content="Matthew B. Gray">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -274,7 +274,7 @@
 					<section data-markdown>
 						### Part 2: Personal workflow
 						* Objectives
-							- __Isolate and Triage: Context hunting <-- you are here__
+							- __Isolate and Triage: Context hunting &lt;-- you are here__
 							- Work: Mastering branches
 							- Update, Test: Audit work interactively
 							- Share: Manage merge conflicts like a pro
@@ -1050,7 +1050,7 @@
 				</section>
 
 				<section>
-					<p>Big finish</p>
+					<img class="cat-slogan-image" src="css/theme/images/freedom-to-innovate.svg" alt="freedom to innovate">
 					<img src="images/big-end.gif" alt="Boom" style="height:500px;">
 				</section>
 			</div>
