--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 						git bisect log &gt; bisect.log
 						# ... time passes
 						git bisect reset
-						git bisect reply bisect.log
+						git bisect replay bisect.log
 						```
 					</section>
 
