Messing with images

--- a/index.html
+++ b/index.html
@@ -161,31 +161,28 @@
 						</script>
 					</section>
 
-					<section
-						data-markdown
-						data-background-image="images/fork.gif"
-						data-background-repeat="repeat"
-						data-background-size="400px"
-					>
-						<script type="text/template">
-							![fork](images/github-git-acheivements.png)
-						</script>
+					<section data-background-image="images/github-chalk.jpg"></section>
+					<section data-markdown>
+						![fork me](images/github-git-acheivements.png)
 					</section>
 
-					<section data-markdown>
-						### Unlocking Achievements in Git
-						----------------------------------------
-						If you have a github account
 
-						1. https://github.com/icefox/git-achievements
-						2. Fork that repo
-						3. Go to your forked project, and clone it
-						----------------------------------------
+					<section>
+						<div data-markdown>
+							### Unlocking Achievements in Git
+							----------------------------------------
+							If you have a github account
 
-						No account? You can still run it locally, just don't let it push
-						```bash
-						git clone https://github.com/icefox/git-achievements.git
-						```
+							1. https://github.com/icefox/git-achievements
+							2. Fork that repo
+							3. Go to your forked project, and clone it
+							----------------------------------------
+
+							No account? You can still run it locally, just don't let it push
+							```bash
+							git clone https://github.com/icefox/git-achievements.git
+							```
+						</div>
 					</section>
 
 					<section data-markdown>
@@ -526,13 +523,6 @@
 							- Share: Manage merge conflicts like a pro
 					</section>
 
-					<section>
-						<img
-						src="images/individual-workflow.svg"
-						height="500px"
-						>
-					</section>
-
 					<section data-markdown>
 						### Mastering branches: Overview
 						Git thinks in Snapshots, Not Differences
@@ -689,13 +679,6 @@
 					</section>
 
 					<section>
-						<img
-							src="images/individual-workflow.svg"
-							height="500px"
-						>
-					</section>
-
-					<section>
 						<div data-markdown>
 							### Audit work interactively
 							Audit your work interactively with your staging area
@@ -730,13 +713,6 @@
 					</section>
 
 					<section>
-						<img
-							src="images/individual-workflow.svg"
-							height="500px"
-						>
-					</section>
-
-					<section>
 						<div data-markdown>
 							### Manage merge conflicts like a pro
 							Source control is about social coding and interactions.
@@ -761,6 +737,10 @@
 							git merge $ref
 							```
 						</div>
+					</section>
+
+					<section>
+						<img src="images/individual-workflow.svg" height="500px">
 					</section>
 
 					<section data-markdown>
@@ -789,7 +769,8 @@
 					</section>
 
 					<section>
-						<img src="images/share.gif">
+						<img src="images/share.gif" height="350px">
+						<p>When you use git to share your stuff</p>
 					</section>
 					<section>
 						<div data-markdown>
@@ -868,7 +849,8 @@
 						</div>
 					</section>
 					<section>
-            <img src="images/under-attack.gif">
+						<img src="images/under-attack.gif" height="500px">
+						<p>Non technical people wrestling with git</p>
 					</section>
 					<section>
 						<div data-markdown>
