Added an instruction

--- a/index.html
+++ b/index.html
@@ -494,6 +494,7 @@
 
 						```bash
 						git clone https://github.com/catalyst-training/jabberwocky
+						cd jabberwocky
 						git fetch --tags
 						git log -p
 						git log --stat
