--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
 						</div>
 					</section>
 					<section>
-						<h1>Each has it's costs, choose the one that works best</h1>
+						<h1>Each has it's costs! Choose the one that works best</h1>
 					</section>
 				</section>
 
