16:44 < heiko> :) apostrophe, not comma

--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
 						</div>
 					</section>
 					<section>
-						<h1>Each has it's costs! Choose the one that works best</h1>
+						<h1>Each has its costs! Choose the one that works best</h1>
 					</section>
 				</section>
 
