--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 						Context is important so you can...
 
 						* Avoid regressing your codebase
-						* Find out if code is still under warantee
+						* Find out if code is still under waranty
 						* Get help if you get stuck, seek out a human
 						----------------------------------------
 					</section>
@@ -750,7 +750,7 @@
 							git status
 							git blame $file
 							```
-							Markers are usually HEAD and a $ref, wher
+							Markers are usually HEAD and a $ref, where:
 
 							1. HEAD is work of yours
 							2. $ref is the thing you're in conflict with
