--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						git config --global core.editor vim
 						```
 
-						All these settings are storred in **~/.gitconfig**
+						All these settings are stored in **~/.gitconfig**
 					</section>
 					<section data-markdown>
 						<script type="text/template">
@@ -156,7 +156,7 @@
 							git config --global branch.autosetuprebase always
 							```
 
-							All these settings are storred in **~/.gitconfig**
+							All these settings are stored in **~/.gitconfig**
 						</script>
 					</section>
 					<section>
