Install instructions for some GUIs

--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
 					</section>
 
 					<section data-markdown>
+						### Install some stuff
+
+						A gui might be nice
+
+						```bash
+						sudo apt-get install gitg
+						            OR
+						sudo apt-get install gitk
+                        
+						```
+
+					</section>
+
+					<section data-markdown>
 						### Basic config for these machines
 
 						Git would like you to specify
