--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
 
 					<section data-markdown>
 							### Quickly setup local, network accessible repos
-							Enter clustom alias! You just need to run this once...
+							Enter custom alias! You just need to run this once...
 
 							```bash
 							git config --global alias.serve "daemon --verbose --export-all
