And giffy goodness for the end of Part 4.

--- a/index.html
+++ b/index.html
@@ -1040,8 +1040,8 @@
 							![](images/release-branches.png)
 						</div>
 					</section>
-					<section>
-						<h1>Each has its costs! Choose the one that works best</h1>
+					<section data-background-image="images/choose.gif">
+						<h1 style="color:white">Each has its costs! Choose the one that works best</h1>
 					</section>
 				</section>
 
