--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
 					<section>
 						<div data-markdown>
 							### Working with people who don't enjoy source control
-							Idea #1: Empower them, let them mange their commits, but manage their merges
+							Idea #1: Empower them, let them manage their commits, but manage their merges
 
 							![](images/branches-typical.png)
 						</div>
