--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 						Context is important so you can...
 
 						* Avoid regressing your codebase
-						* Find out if code is still under waranty
+						* Find out if code is still under warranty
 						* Get help if you get stuck, seek out a human
 						----------------------------------------
 					</section>
@@ -960,7 +960,7 @@
 
 							----------------------------------------
 
-							You can either use convetion, or process to manage this
+							You can either use convention, or process to manage this
 
 							1. Numeric patch - set 1+$current in your filename
 							2. Automatic numeric patch - use a merge script on release
@@ -969,11 +969,11 @@
 					<section>
 						<div data-markdown>
 							### Strategies for dealing with client requirements
-							The battle of flexability vs simplicity
+							The battle of flexibility vs simplicity
 
 							----------------------------------------
 
-							A typical client may ask you to be flexable on the following
+							A typical client may ask you to be flexible on the following
 
 							* Track changes, find bugs and release when you can
 							* Working on releases in parallel
