Typo in the word "Professionalism"
Spelling ftw.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<li>Mike O' – For approving this course</li>
 						<li>Alison Aldred – Organise all the things</li>
 						<li>Evan Giles – Inspiration and advice</li>
-						<li>Robert Higgins – Standardisation and profesionalism</li>
+						<li>Robert Higgins – Standardisation and professionalism</li>
 					</ul>
 				</section>
 
